--- a/VitalzApp/app/src/main/res/layout/fragment_otp_confirm.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_otp_confirm.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/vitalz"
-    tools:context=".otp_confirm.OtpConformActivity">
+    android:background="@mipmap/vitalz">
 
     <ImageView
         android:id="@+id/imageView_vitalz"
