--- a/VitalzApp/app/src/main/res/values/styles.xml
+++ b/VitalzApp/app/src/main/res/values/styles.xml
@@ -100,9 +100,15 @@
     <style name="dateBtn">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_margin">@dimen/dp_5</item>
         <item name="android:padding">@dimen/dp_5</item>
         <item name="android:background">@drawable/bg_dark</item>
+    </style>
+
+    <style name="dashboard_care_taker">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">@dimen/dp_16</item>
+        <item name="android:background">@drawable/bg_dash_board_care_taker</item>
     </style>
 
     <style name="otp_editText">
