--- a/VitalzApp/app/src/main/res/values/styles.xml
+++ b/VitalzApp/app/src/main/res/values/styles.xml
@@ -126,8 +126,9 @@
     </style>
 
     <style name="button">
-        <item name="android:layout_width">@dimen/dp_240</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:ems">10</item>
         <item name="android:layout_marginTop">@dimen/dp_16</item>
         <item name="android:padding">@dimen/dp_16</item>
         <item name="android:backgroundTint">@color/button_blue</item>
@@ -147,11 +148,12 @@
     </style>
 
     <style name="etRequestOtp">
-        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">@dimen/dp_50</item>
         <item name="android:paddingStart">@dimen/dp_8</item>
         <item name="android:maxLength">10</item>
         <item name="android:inputType">number</item>
+        <item name="android:ems">10</item>
         <item name="android:background">@drawable/edit_text_box</item>
         <item name="android:layout_margin">@dimen/dp_32</item>
     </style>
